--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,14 +3,10 @@
 # Check https://circleci.com/docs/2.0/language-python/ for more details
 #
 
-
-
 version: 2
 jobs:
-  build-1:
+  build:
     docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image:  google/cloud-sdk
       working_directory: ~
     steps:
