--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,23 @@ jobs:
   build:
     docker:
       - image: google/cloud-sdk
+      working_directory: ~
     steps:
       - checkout
       - run: echo "HELLO build"
+      
   test:
     docker:
       - image: google/cloud-sdk
     steps:
       - checkout
       - run: echo "HELLO test"
+      - run: 
+          name: run tests
+          command: |
+            echo "-----start test:"
+            python simple_test.py
+            echo "-----end test"
 workflows:
   version: 2
   build_and_test:
