--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,35 @@ jobs:
             echo "-----start test:"
             python simple_test.py
             echo "-----end test"
+  pre_deploy:
+    docker:
+      - image: google/cloud-sdk
+    steps:
+      - checkout
+      - run:
+          name: run pre_deploy ... set config
+          command: |    
+            echo "----run gcp config"
+            gcloud --quiet components update
+            apt-get update && sudo apt-get --only-upgrade install kubectl google-cloud-sdk google-cloud-sdk-app-engine-grpc google-cloud-sdk-pubsub-emulator google-cloud-sdk-app-engine-go google-cloud-sdk-datastore-emulator google-cloud-sdk-app-engine-python google-cloud-sdk-cbt google-cloud-sdk-bigtable-emulator google-cloud-sdk-app-engine-python-extras google-cloud-sdk-datalab google-cloud-sdk-app-engine-java
+            
+            echo $GCLOUD_SERVICE_KEY | base64 --decode --ignore-garbage > ./gcloud-service-key.json
+            gcloud auth activate-service-account --key-file=./gcloud-service-key.json
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud --quiet container clusters get-credentials ${GOOGLE_CLUSTER_NAME}
+            echo "-----end config"
+
+
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
       - test
+      - pre_deploy:
+        requires:
+          - test
+          - build
+
 
